// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design|Atoms/A Default Link 1`] = `
<div>
  <div
    style={
      Object {
        "alignItems": "center",
        "bottom": "0",
        "display": "flex",
        "left": "0",
        "overflow": "auto",
        "position": "fixed",
        "right": "0",
        "top": "0",
      }
    }
  >
    <div
      style={
        Object {
          "margin": "auto",
          "maxHeight": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <a
          className="A-ml9y9l-0 gDIWOl"
          href="https://www.google.com"
        >
          A Link
        </a>
      </div>
      <button
        className="info__show-button"
        onClick={[Function]}
        style={
          Object {
            "background": "#027ac5",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design|Atoms/Anicon Search Anicon 1`] = `
<div>
  <div
    style={
      Object {
        "alignItems": "center",
        "bottom": "0",
        "display": "flex",
        "left": "0",
        "overflow": "auto",
        "position": "fixed",
        "right": "0",
        "top": "0",
      }
    }
  >
    <div
      style={
        Object {
          "margin": "auto",
          "maxHeight": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <div
          className="anicon-container Anicon__HoverContainer-sc-119yqeq-0 iCLpQU"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            style={
              Object {
                "cursor": "pointer",
                "height": "100%",
                "transform": "rotate(0deg)",
                "width": "100px",
              }
            }
          />
        </div>
      </div>
      <button
        className="info__show-button"
        onClick={[Function]}
        style={
          Object {
            "background": "#027ac5",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design|Atoms/Anicon With Dynamic Variables 1`] = `
<div>
  <div
    style={
      Object {
        "alignItems": "center",
        "bottom": "0",
        "display": "flex",
        "left": "0",
        "overflow": "auto",
        "position": "fixed",
        "right": "0",
        "top": "0",
      }
    }
  >
    <div
      style={
        Object {
          "margin": "auto",
          "maxHeight": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <div
          className="anicon-container Anicon__HoverContainer-sc-119yqeq-0 iCLpQU"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            style={
              Object {
                "cursor": "pointer",
                "height": "100%",
                "transform": "rotate(0deg)",
                "width": "100px",
              }
            }
          />
        </div>
      </div>
      <button
        className="info__show-button"
        onClick={[Function]}
        style={
          Object {
            "background": "#027ac5",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design|Atoms/Icon Facebook Icon 1`] = `
<div>
  <div
    style={
      Object {
        "alignItems": "center",
        "bottom": "0",
        "display": "flex",
        "left": "0",
        "overflow": "auto",
        "position": "fixed",
        "right": "0",
        "top": "0",
      }
    }
  >
    <div
      style={
        Object {
          "margin": "auto",
          "maxHeight": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <div />
      </div>
      <button
        className="info__show-button"
        onClick={[Function]}
        style={
          Object {
            "background": "#027ac5",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design|Atoms/IconButton Facebook Icon Button 1`] = `
<div>
  <div
    style={
      Object {
        "alignItems": "center",
        "bottom": "0",
        "display": "flex",
        "left": "0",
        "overflow": "auto",
        "position": "fixed",
        "right": "0",
        "top": "0",
      }
    }
  >
    <div
      style={
        Object {
          "margin": "auto",
          "maxHeight": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <div
          className="IconButton__IconContainer-pjjsvs-0 bKDZXR"
        >
          <div
            onClick={[Function]}
          />
        </div>
      </div>
      <button
        className="info__show-button"
        onClick={[Function]}
        style={
          Object {
            "background": "#027ac5",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design|Atoms/Img Default Image 1`] = `
<div>
  <div
    style={
      Object {
        "alignItems": "center",
        "bottom": "0",
        "display": "flex",
        "left": "0",
        "overflow": "auto",
        "position": "fixed",
        "right": "0",
        "top": "0",
      }
    }
  >
    <div
      style={
        Object {
          "margin": "auto",
          "maxHeight": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <img
          alt="placeholder - 200x200"
          src="https://via.placeholder.com/200"
        />
      </div>
      <button
        className="info__show-button"
        onClick={[Function]}
        style={
          Object {
            "background": "#027ac5",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design|Atoms/Subtitle Blue Subtitle 1`] = `
<div>
  <div
    style={
      Object {
        "alignItems": "center",
        "bottom": "0",
        "display": "flex",
        "left": "0",
        "overflow": "auto",
        "position": "fixed",
        "right": "0",
        "top": "0",
      }
    }
  >
    <div
      style={
        Object {
          "margin": "auto",
          "maxHeight": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <h2
          className="Subtitle-yqye76-0 iMMeuJ"
          color="blue"
          size="large"
        >
          Blue Subtitle
        </h2>
      </div>
      <button
        className="info__show-button"
        onClick={[Function]}
        style={
          Object {
            "background": "#027ac5",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design|Atoms/Subtitle Default Size 1`] = `
<div>
  <div
    style={
      Object {
        "alignItems": "center",
        "bottom": "0",
        "display": "flex",
        "left": "0",
        "overflow": "auto",
        "position": "fixed",
        "right": "0",
        "top": "0",
      }
    }
  >
    <div
      style={
        Object {
          "margin": "auto",
          "maxHeight": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <h2
          className="Subtitle-yqye76-0 bCUwuB"
          color="inherit"
          size="large"
        >
          Large Subtitle
        </h2>
      </div>
      <button
        className="info__show-button"
        onClick={[Function]}
        style={
          Object {
            "background": "#027ac5",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design|Atoms/Subtitle Medium Size 1`] = `
<div>
  <div
    style={
      Object {
        "alignItems": "center",
        "bottom": "0",
        "display": "flex",
        "left": "0",
        "overflow": "auto",
        "position": "fixed",
        "right": "0",
        "top": "0",
      }
    }
  >
    <div
      style={
        Object {
          "margin": "auto",
          "maxHeight": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <h2
          className="Subtitle-yqye76-0 hyLxBF"
          color="inherit"
          size="medium"
        >
          Medium Subtitle
        </h2>
      </div>
      <button
        className="info__show-button"
        onClick={[Function]}
        style={
          Object {
            "background": "#027ac5",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design|Atoms/Subtitle Small Size 1`] = `
<div>
  <div
    style={
      Object {
        "alignItems": "center",
        "bottom": "0",
        "display": "flex",
        "left": "0",
        "overflow": "auto",
        "position": "fixed",
        "right": "0",
        "top": "0",
      }
    }
  >
    <div
      style={
        Object {
          "margin": "auto",
          "maxHeight": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <h2
          className="Subtitle-yqye76-0 zJRux"
          color="inherit"
          size="small"
        >
          Small Subtitle
        </h2>
      </div>
      <button
        className="info__show-button"
        onClick={[Function]}
        style={
          Object {
            "background": "#027ac5",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design|Atoms/Title Blue Title 1`] = `
<div>
  <div
    style={
      Object {
        "alignItems": "center",
        "bottom": "0",
        "display": "flex",
        "left": "0",
        "overflow": "auto",
        "position": "fixed",
        "right": "0",
        "top": "0",
      }
    }
  >
    <div
      style={
        Object {
          "margin": "auto",
          "maxHeight": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <h1
          className="Title-sc-3abvrr-0 display-1  gcrcWc"
          color="blue"
          size={1}
        >
          Blue Title
        </h1>
      </div>
      <button
        className="info__show-button"
        onClick={[Function]}
        style={
          Object {
            "background": "#027ac5",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design|Atoms/Title Default Title 1`] = `
<div>
  <div
    style={
      Object {
        "alignItems": "center",
        "bottom": "0",
        "display": "flex",
        "left": "0",
        "overflow": "auto",
        "position": "fixed",
        "right": "0",
        "top": "0",
      }
    }
  >
    <div
      style={
        Object {
          "margin": "auto",
          "maxHeight": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <h1
          className="Title-sc-3abvrr-0 display-1  hDDVwe"
          color="inherit"
          size={1}
        >
          Large Title
        </h1>
      </div>
      <button
        className="info__show-button"
        onClick={[Function]}
        style={
          Object {
            "background": "#027ac5",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design|Atoms/Title With Dynamic Variables 1`] = `
<div>
  <div
    style={
      Object {
        "alignItems": "center",
        "bottom": "0",
        "display": "flex",
        "left": "0",
        "overflow": "auto",
        "position": "fixed",
        "right": "0",
        "top": "0",
      }
    }
  >
    <div
      style={
        Object {
          "margin": "auto",
          "maxHeight": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <h1
          className="Title-sc-3abvrr-0 display-1  hDDVwe"
          color="inherit"
          size={1}
        >
          Title
        </h1>
      </div>
      <button
        className="info__show-button"
        onClick={[Function]}
        style={
          Object {
            "background": "#027ac5",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design|Atoms/Title With Sizes 1`] = `
<div>
  <div
    style={
      Object {
        "alignItems": "center",
        "bottom": "0",
        "display": "flex",
        "left": "0",
        "overflow": "auto",
        "position": "fixed",
        "right": "0",
        "top": "0",
      }
    }
  >
    <div
      style={
        Object {
          "margin": "auto",
          "maxHeight": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <div>
          <h1
            className="Title-sc-3abvrr-0 display-1  hDDVwe"
            color="inherit"
            size={1}
          >
            Size 1
          </h1>
          <h1
            className="Title-sc-3abvrr-0 display-2  hDDVwe"
            color="inherit"
            size={2}
          >
            Size 2
          </h1>
          <h1
            className="Title-sc-3abvrr-0 display-3  hDDVwe"
            color="inherit"
            size={3}
          >
            Size 3
          </h1>
          <h1
            className="Title-sc-3abvrr-0 display-4  hDDVwe"
            color="inherit"
            size={4}
          >
            Size 4
          </h1>
        </div>
      </div>
      <button
        className="info__show-button"
        onClick={[Function]}
        style={
          Object {
            "background": "#027ac5",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design|Molecules/Banner Default Banner 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="p-0 Banner__BannerContainer-sc-1in81vp-0 hQvtbb"
    >
      <div
        className="banner-wrapper py-1"
      >
        <div
          className="banner-text text-center"
        >
          Banner
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Design|Molecules/Banner With Dynamic Variables 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="p-0 Banner__BannerContainer-sc-1in81vp-0 ckUHPb"
    >
      <div
        className="banner-wrapper py-1"
      >
        <div
          className="banner-text text-center"
        >
          <h3>
            Banner Content!
          </h3>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Design|Molecules/Banner With Text 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="p-0 Banner__BannerContainer-sc-1in81vp-0 ckUHPb"
    >
      <div
        className="banner-wrapper py-1"
      >
        <div
          className="banner-text text-center"
        >
          <h3>
            Hi
          </h3>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Design|Molecules/Hero Default Hero 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      data-css-18sl43g=""
    >
      <div
        data-css-7odcmz=""
      >
        <h2
          data-css-ekxd8x=""
        >
          Hero Component
        </h2>
      </div>
      <div
        data-css-1uksfg7=""
      >
        <div
          data-css-71mbpc=""
        >
          <div
            data-css-1burwd1=""
          >
            <div
              className="hero Hero__StyledJumbotron-sc-1ele3ck-0 eBBpFn jumbotron"
            >
              <div
                className="h-100 container"
              >
                <div
                  className="row"
                >
                  <div
                    className="pb-3 my-auto col-6"
                  >
                    <h1
                      className="Title-sc-3abvrr-0 mb-0 font-weight-bold Hero__HeroTitle-sc-1ele3ck-1 display-1 mb-0 font-weight-bold bqYlOi"
                      color="#fefefe"
                      size={1}
                    >
                      HERO TEXT
                    </h1>
                  </div>
                </div>
                <div
                  className="row"
                >
                  <div
                    className="py-3 col-3"
                  >
                    <button
                      className="btn btn-outline-light btn-lg"
                      disabled={false}
                      onClick={[Function]}
                      type="button"
                    >
                      Click Me
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div>
              <div
                data-css-1xjdp6g=""
              >
                <div
                  data-css-1u3clyi=""
                />
                <div
                  data-css-1vfpuyw=""
                />
              </div>
              <div
                data-css-1l117w4=""
              >
                <div
                  data-css-6x2xk9=""
                />
                <div
                  data-css-dh4rml=""
                />
              </div>
              <div
                data-css-3dqrhs=""
              >
                <div
                  data-css-jidh41=""
                />
                <div
                  data-css-zkhvkf=""
                />
              </div>
              <div
                data-css-14agfjn=""
              >
                <div
                  data-css-1dkszzo=""
                />
                <div
                  data-css-mqumhe=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Design|Molecules/Hero With Dynamic Variables 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      data-css-18sl43g=""
    >
      <div
        data-css-7odcmz=""
      >
        <h2
          data-css-ekxd8x=""
        >
          Hero Component
        </h2>
      </div>
      <div
        data-css-1uksfg7=""
      >
        <div
          data-css-71mbpc=""
        >
          <div
            data-css-1burwd1=""
          >
            <div
              className="hero Hero__StyledJumbotron-sc-1ele3ck-0 eBBpFn jumbotron"
            >
              <div
                className="h-100 container"
              >
                <div
                  className="row"
                >
                  <div
                    className="pb-3 my-auto col-6"
                  >
                    <h1
                      className="Title-sc-3abvrr-0 mb-0 font-weight-bold Hero__HeroTitle-sc-1ele3ck-1 display-1 mb-0 font-weight-bold bqYlOi"
                      color="#fefefe"
                      size={1}
                    >
                      TITLE
                    </h1>
                  </div>
                </div>
                <div
                  className="row"
                >
                  <div
                    className="py-3 col-3"
                  >
                    <button
                      className="btn btn-outline-light btn-lg"
                      disabled={false}
                      onClick={[Function]}
                      type="button"
                    >
                      Click Me
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div>
              <div
                data-css-1xjdp6g=""
              >
                <div
                  data-css-1u3clyi=""
                />
                <div
                  data-css-1vfpuyw=""
                />
              </div>
              <div
                data-css-1l117w4=""
              >
                <div
                  data-css-6x2xk9=""
                />
                <div
                  data-css-dh4rml=""
                />
              </div>
              <div
                data-css-3dqrhs=""
              >
                <div
                  data-css-jidh41=""
                />
                <div
                  data-css-zkhvkf=""
                />
              </div>
              <div
                data-css-14agfjn=""
              >
                <div
                  data-css-1dkszzo=""
                />
                <div
                  data-css-mqumhe=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Design|Molecules/IconGroup Social Icon Button Group 1`] = `
<div>
  <div
    style={
      Object {
        "alignItems": "center",
        "bottom": "0",
        "display": "flex",
        "left": "0",
        "overflow": "auto",
        "position": "fixed",
        "right": "0",
        "top": "0",
      }
    }
  >
    <div
      style={
        Object {
          "margin": "auto",
          "maxHeight": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <div
          className="border-0  list-group list-group-horizontal"
          onKeyDown={[Function]}
        >
          <div
            className="IconGroup__BorderlessItem-sc-1br5l8c-0 igufRO list-group-item"
            data-rb-event-key={null}
            disabled={false}
            onClick={[Function]}
          >
            <div
              className="IconButton__IconContainer-pjjsvs-0 bKDZXR"
            >
              <div
                onClick={[Function]}
              />
            </div>
          </div>
          <div
            className="IconGroup__BorderlessItem-sc-1br5l8c-0 igufRO list-group-item"
            data-rb-event-key={null}
            disabled={false}
            onClick={[Function]}
          >
            <div
              className="IconButton__IconContainer-pjjsvs-0 bKDZXR"
            >
              <div
                onClick={[Function]}
              />
            </div>
          </div>
          <div
            className="IconGroup__BorderlessItem-sc-1br5l8c-0 igufRO list-group-item"
            data-rb-event-key={null}
            disabled={false}
            onClick={[Function]}
          >
            <div
              className="IconButton__IconContainer-pjjsvs-0 bKDZXR"
            >
              <div
                onClick={[Function]}
              />
            </div>
          </div>
        </div>
      </div>
      <button
        className="info__show-button"
        onClick={[Function]}
        style={
          Object {
            "background": "#027ac5",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design|Molecules/IconGroup Social Icon Group 1`] = `
<div>
  <div
    style={
      Object {
        "alignItems": "center",
        "bottom": "0",
        "display": "flex",
        "left": "0",
        "overflow": "auto",
        "position": "fixed",
        "right": "0",
        "top": "0",
      }
    }
  >
    <div
      style={
        Object {
          "margin": "auto",
          "maxHeight": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <div
          className="border-0  list-group list-group-horizontal"
          onKeyDown={[Function]}
        >
          <div
            className="IconGroup__BorderlessItem-sc-1br5l8c-0 igufRO list-group-item"
            data-rb-event-key={null}
            disabled={false}
            onClick={[Function]}
          >
            <div />
          </div>
          <div
            className="IconGroup__BorderlessItem-sc-1br5l8c-0 igufRO list-group-item"
            data-rb-event-key={null}
            disabled={false}
            onClick={[Function]}
          >
            <div />
          </div>
          <div
            className="IconGroup__BorderlessItem-sc-1br5l8c-0 igufRO list-group-item"
            data-rb-event-key={null}
            disabled={false}
            onClick={[Function]}
          >
            <div />
          </div>
        </div>
      </div>
      <button
        className="info__show-button"
        onClick={[Function]}
        style={
          Object {
            "background": "#027ac5",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design|Molecules/Logo Default Logo 1`] = `
<div>
  <div
    style={
      Object {
        "alignItems": "center",
        "bottom": "0",
        "display": "flex",
        "left": "0",
        "overflow": "auto",
        "position": "fixed",
        "right": "0",
        "top": "0",
      }
    }
  >
    <div
      style={
        Object {
          "margin": "auto",
          "maxHeight": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <img
          alt="CharlieCarsonKids - Logo"
          src="https://s3.amazonaws.com/static.charliecarsonkids.com/assets/img/logo.png"
        />
      </div>
      <button
        className="info__show-button"
        onClick={[Function]}
        style={
          Object {
            "background": "#027ac5",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design|Molecules/Navigation Default Navigation 1`] = `
<div>
  <div
    style={
      Object {
        "alignItems": "center",
        "bottom": "0",
        "display": "flex",
        "left": "0",
        "overflow": "auto",
        "position": "fixed",
        "right": "0",
        "top": "0",
      }
    }
  >
    <div
      style={
        Object {
          "margin": "auto",
          "maxHeight": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "position": "relative",
            "zIndex": 0,
          }
        }
      >
        <div
          className="indexstories__NavBackground-sc-1dii5sm-0 hBeNan"
        >
          <nav
            className="Navigation__StyledNavbar-sc-11o2ur6-0 bXviVH navbar navbar-expand-lg navbar-light"
          >
            <button
              aria-controls="responsive-navbar-nav"
              aria-label="Toggle navigation"
              className="navbar-toggler collapsed"
              onClick={[Function]}
              type="button"
            >
              <span
                className="navbar-toggler-icon"
              />
            </button>
            <div
              aria-expanded={null}
              className="navbar-collapse collapse"
              id="responsive-navbar-nav"
            >
              <div
                className="m-auto justify-content-around navbar-nav"
                onKeyDown={[Function]}
              >
                <a
                  className="nav-link"
                  data-rb-event-key="new"
                  href="new"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  new
                </a>
                <a
                  className="nav-link"
                  data-rb-event-key="boys"
                  href="boys"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  boys
                </a>
                <a
                  className="nav-link"
                  data-rb-event-key="girls"
                  href="girls"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  girls
                </a>
                <a
                  className="nav-link"
                  data-rb-event-key="baby"
                  href="baby"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  baby
                </a>
                <a
                  className="nav-link"
                  data-rb-event-key="collections"
                  href="collections"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  collections
                </a>
                <a
                  className="nav-link"
                  data-rb-event-key="about"
                  href="about"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  about
                </a>
              </div>
            </div>
          </nav>
        </div>
      </div>
      <button
        className="info__show-button"
        onClick={[Function]}
        style={
          Object {
            "background": "#027ac5",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        Show Info
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design|Organisms/Header Default Header 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      data-css-18sl43g=""
    >
      <div
        data-css-7odcmz=""
      >
        <h2
          data-css-ekxd8x=""
        >
          Header Component
        </h2>
      </div>
      <div
        data-css-1uksfg7=""
      >
        <div
          data-css-f2o14s=""
        >
          <div
            data-css-10ubgfl=""
          >
            <div
              className="container"
            >
              <div
                className="row"
              >
                <div
                  className="d-flex justify-content-start px-3 py-2 col"
                >
                  <div
                    className="border-0  list-group list-group-horizontal"
                    onKeyDown={[Function]}
                  >
                    <div
                      className="IconGroup__BorderlessItem-sc-1br5l8c-0 igufRO list-group-item"
                      data-rb-event-key={null}
                      disabled={false}
                      onClick={[Function]}
                    >
                      <div
                        className="IconButton__IconContainer-pjjsvs-0 bKDZXR"
                      >
                        <div
                          onClick={[Function]}
                        />
                      </div>
                    </div>
                    <div
                      className="IconGroup__BorderlessItem-sc-1br5l8c-0 igufRO list-group-item"
                      data-rb-event-key={null}
                      disabled={false}
                      onClick={[Function]}
                    >
                      <div
                        className="IconButton__IconContainer-pjjsvs-0 bKDZXR"
                      >
                        <div
                          onClick={[Function]}
                        />
                      </div>
                    </div>
                    <div
                      className="IconGroup__BorderlessItem-sc-1br5l8c-0 igufRO list-group-item"
                      data-rb-event-key={null}
                      disabled={false}
                      onClick={[Function]}
                    >
                      <div
                        className="IconButton__IconContainer-pjjsvs-0 bKDZXR"
                      >
                        <div
                          onClick={[Function]}
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="d-flex justify-content-end px-3 py-2 col"
                >
                  <div
                    className="border-0  list-group list-group-horizontal"
                    onKeyDown={[Function]}
                  >
                    <div
                      className="IconGroup__BorderlessItem-sc-1br5l8c-0 igufRO list-group-item"
                      data-rb-event-key={null}
                      disabled={false}
                      onClick={[Function]}
                    >
                      <div
                        className="IconButton__IconContainer-pjjsvs-0 bKDZXR"
                      >
                        <div
                          className="anicon-container Anicon__HoverContainer-sc-119yqeq-0 iCLpQU"
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                        >
                          <div
                            style={
                              Object {
                                "cursor": "pointer",
                                "height": "100%",
                                "transform": "rotate(90deg)",
                                "width": "40px",
                              }
                            }
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      className="IconGroup__BorderlessItem-sc-1br5l8c-0 igufRO list-group-item"
                      data-rb-event-key={null}
                      disabled={false}
                      onClick={[Function]}
                    >
                      <div
                        className="IconButton__IconContainer-pjjsvs-0 bKDZXR"
                      >
                        <div
                          className="anicon-container Anicon__HoverContainer-sc-119yqeq-0 iCLpQU"
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                        >
                          <div
                            style={
                              Object {
                                "cursor": "pointer",
                                "height": "100%",
                                "transform": "rotate(0deg)",
                                "width": "40px",
                              }
                            }
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="justify-content-md-center row"
              >
                <div
                  className="d-flex justify-content-center py-3 col-md-auto"
                >
                  <div
                    className="w-50"
                  >
                    <img
                      className="img-fluid"
                      src="IMAGE_MOCK"
                    />
                  </div>
                </div>
              </div>
              <div
                className="row"
              >
                <div
                  className="col"
                >
                  <nav
                    className="Navigation__StyledNavbar-sc-11o2ur6-0 bXviVH navbar navbar-expand-lg navbar-light"
                  >
                    <button
                      aria-controls="responsive-navbar-nav"
                      aria-label="Toggle navigation"
                      className="navbar-toggler collapsed"
                      onClick={[Function]}
                      type="button"
                    >
                      <span
                        className="navbar-toggler-icon"
                      />
                    </button>
                    <div
                      aria-expanded={null}
                      className="navbar-collapse collapse"
                      id="responsive-navbar-nav"
                    >
                      <div
                        className="m-auto justify-content-around navbar-nav"
                        onKeyDown={[Function]}
                      >
                        <a
                          className="nav-link"
                          data-rb-event-key="new"
                          href="new"
                          onClick={[Function]}
                          onKeyDown={[Function]}
                        >
                          new
                        </a>
                        <a
                          className="nav-link"
                          data-rb-event-key="boys"
                          href="boys"
                          onClick={[Function]}
                          onKeyDown={[Function]}
                        >
                          boys
                        </a>
                        <a
                          className="nav-link"
                          data-rb-event-key="girls"
                          href="girls"
                          onClick={[Function]}
                          onKeyDown={[Function]}
                        >
                          girls
                        </a>
                        <a
                          className="nav-link"
                          data-rb-event-key="baby"
                          href="baby"
                          onClick={[Function]}
                          onKeyDown={[Function]}
                        >
                          baby
                        </a>
                        <a
                          className="nav-link"
                          data-rb-event-key="collections"
                          href="collections"
                          onClick={[Function]}
                          onKeyDown={[Function]}
                        >
                          collections
                        </a>
                        <a
                          className="nav-link"
                          data-rb-event-key="about"
                          href="about"
                          onClick={[Function]}
                          onKeyDown={[Function]}
                        >
                          about
                        </a>
                      </div>
                    </div>
                  </nav>
                </div>
              </div>
            </div>
            <div>
              <div
                data-css-1xjdp6g=""
              >
                <div
                  data-css-1u3clyi=""
                />
                <div
                  data-css-1vfpuyw=""
                />
              </div>
              <div
                data-css-1l117w4=""
              >
                <div
                  data-css-6x2xk9=""
                />
                <div
                  data-css-dh4rml=""
                />
              </div>
              <div
                data-css-3dqrhs=""
              >
                <div
                  data-css-jidh41=""
                />
                <div
                  data-css-zkhvkf=""
                />
              </div>
              <div
                data-css-14agfjn=""
              >
                <div
                  data-css-1dkszzo=""
                />
                <div
                  data-css-mqumhe=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Design|Organisms/HomeHero Default Story 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="HomeHero__HeroContainer-sc-18ez42y-0 lcxRvI container"
    >
      <div
        className="hero Hero__StyledJumbotron-sc-1ele3ck-0 nwfXD jumbotron"
      >
        <div
          className="h-100 container"
        >
          <div
            className="row"
          >
            <div
              className="pb-3 my-auto col-6"
            >
              <h1
                className="Title-sc-3abvrr-0 mb-0 font-weight-bold Hero__HeroTitle-sc-1ele3ck-1 display-1 mb-0 font-weight-bold bqYlOi"
                color="#fefefe"
                size={1}
              >
                NEW ARRIVALS
              </h1>
            </div>
          </div>
          <div
            className="row"
          >
            <div
              className="py-3 col-3"
            >
              <button
                className="btn btn-outline-light btn-lg"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                Shop Now
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Design|Templates/HomeLayout With Home Layout 1`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="homepage-container container-fluid"
    >
      <div
        className="row"
      >
        <div
          className="p-0 col"
        >
          <div
            className="p-0 Banner__BannerContainer-sc-1in81vp-0 hQEDkc"
          >
            <div
              className="banner-wrapper py-1"
            >
              <div
                className="banner-text text-center"
              >
                <h6
                  className="MuiTypography-root MuiTypography-subtitle1"
                >
                  free shipping for orders over $100!
                </h6>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col"
        >
          <div
            className="container"
          >
            <div
              className="row"
            >
              <div
                className="d-flex justify-content-start px-3 py-2 col"
              >
                <div
                  className="border-0  list-group list-group-horizontal"
                  onKeyDown={[Function]}
                >
                  <div
                    className="IconGroup__BorderlessItem-sc-1br5l8c-0 igufRO list-group-item"
                    data-rb-event-key={null}
                    disabled={false}
                    onClick={[Function]}
                  >
                    <div
                      className="IconButton__IconContainer-pjjsvs-0 bKDZXR"
                    >
                      <div
                        onClick={[Function]}
                      />
                    </div>
                  </div>
                  <div
                    className="IconGroup__BorderlessItem-sc-1br5l8c-0 igufRO list-group-item"
                    data-rb-event-key={null}
                    disabled={false}
                    onClick={[Function]}
                  >
                    <div
                      className="IconButton__IconContainer-pjjsvs-0 bKDZXR"
                    >
                      <div
                        onClick={[Function]}
                      />
                    </div>
                  </div>
                  <div
                    className="IconGroup__BorderlessItem-sc-1br5l8c-0 igufRO list-group-item"
                    data-rb-event-key={null}
                    disabled={false}
                    onClick={[Function]}
                  >
                    <div
                      className="IconButton__IconContainer-pjjsvs-0 bKDZXR"
                    >
                      <div
                        onClick={[Function]}
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="d-flex justify-content-end px-3 py-2 col"
              >
                <div
                  className="border-0  list-group list-group-horizontal"
                  onKeyDown={[Function]}
                >
                  <div
                    className="IconGroup__BorderlessItem-sc-1br5l8c-0 igufRO list-group-item"
                    data-rb-event-key={null}
                    disabled={false}
                    onClick={[Function]}
                  >
                    <div
                      className="IconButton__IconContainer-pjjsvs-0 bKDZXR"
                    >
                      <div
                        className="anicon-container Anicon__HoverContainer-sc-119yqeq-0 iCLpQU"
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <div
                          style={
                            Object {
                              "cursor": "pointer",
                              "height": "100%",
                              "transform": "rotate(90deg)",
                              "width": "40px",
                            }
                          }
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    className="IconGroup__BorderlessItem-sc-1br5l8c-0 igufRO list-group-item"
                    data-rb-event-key={null}
                    disabled={false}
                    onClick={[Function]}
                  >
                    <div
                      className="IconButton__IconContainer-pjjsvs-0 bKDZXR"
                    >
                      <div
                        className="anicon-container Anicon__HoverContainer-sc-119yqeq-0 iCLpQU"
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <div
                          style={
                            Object {
                              "cursor": "pointer",
                              "height": "100%",
                              "transform": "rotate(0deg)",
                              "width": "40px",
                            }
                          }
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="justify-content-md-center row"
            >
              <div
                className="d-flex justify-content-center py-3 col-md-auto"
              >
                <div
                  className="w-50"
                >
                  <img
                    className="img-fluid"
                    src="IMAGE_MOCK"
                  />
                </div>
              </div>
            </div>
            <div
              className="row"
            >
              <div
                className="col"
              >
                <nav
                  className="Navigation__StyledNavbar-sc-11o2ur6-0 bXviVH navbar navbar-expand-lg navbar-light"
                >
                  <button
                    aria-controls="responsive-navbar-nav"
                    aria-label="Toggle navigation"
                    className="navbar-toggler collapsed"
                    onClick={[Function]}
                    type="button"
                  >
                    <span
                      className="navbar-toggler-icon"
                    />
                  </button>
                  <div
                    aria-expanded={null}
                    className="navbar-collapse collapse"
                    id="responsive-navbar-nav"
                  >
                    <div
                      className="m-auto justify-content-around navbar-nav"
                      onKeyDown={[Function]}
                    >
                      <a
                        className="nav-link"
                        data-rb-event-key="new"
                        href="new"
                        onClick={[Function]}
                        onKeyDown={[Function]}
                      >
                        new
                      </a>
                      <a
                        className="nav-link"
                        data-rb-event-key="boys"
                        href="boys"
                        onClick={[Function]}
                        onKeyDown={[Function]}
                      >
                        boys
                      </a>
                      <a
                        className="nav-link"
                        data-rb-event-key="girls"
                        href="girls"
                        onClick={[Function]}
                        onKeyDown={[Function]}
                      >
                        girls
                      </a>
                      <a
                        className="nav-link"
                        data-rb-event-key="baby"
                        href="baby"
                        onClick={[Function]}
                        onKeyDown={[Function]}
                      >
                        baby
                      </a>
                      <a
                        className="nav-link"
                        data-rb-event-key="collections"
                        href="collections"
                        onClick={[Function]}
                        onKeyDown={[Function]}
                      >
                        collections
                      </a>
                      <a
                        className="nav-link"
                        data-rb-event-key="about"
                        href="about"
                        onClick={[Function]}
                        onKeyDown={[Function]}
                      >
                        about
                      </a>
                    </div>
                  </div>
                </nav>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col"
        >
          <div
            className="HomeHero__HeroContainer-sc-18ez42y-0 lcxRvI container"
          >
            <div
              className="hero Hero__StyledJumbotron-sc-1ele3ck-0 nwfXD jumbotron"
            >
              <div
                className="h-100 container"
              >
                <div
                  className="row"
                >
                  <div
                    className="pb-3 my-auto col-6"
                  >
                    <h1
                      className="Title-sc-3abvrr-0 mb-0 font-weight-bold Hero__HeroTitle-sc-1ele3ck-1 display-1 mb-0 font-weight-bold bqYlOi"
                      color="#fefefe"
                      size={1}
                    >
                      NEW ARRIVALS
                    </h1>
                  </div>
                </div>
                <div
                  className="row"
                >
                  <div
                    className="py-3 col-3"
                  >
                    <button
                      className="btn btn-outline-light btn-lg"
                      disabled={false}
                      onClick={[Function]}
                      type="button"
                    >
                      Shop Now
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
